<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>orh.otsuka.beehive</groupId>
	<artifactId>BeehiveWebCRM</artifactId>
	<packaging>war</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>Beehive Web Flow</name>

	<properties>
		<jdk.version>1.6 </jdk.version>
		<spring.version>4.0.6.RELEASE</spring.version>
        <hibernate.version>4.3.6.Final</hibernate.version>
		<jstl.version>1.2</jstl.version>
		<jackson.version>1.9.10</jackson.version>
		<joda-time.version>2.3</joda-time.version>
		 <mysql.version>5.1.31</mysql.version>
	</properties>

	<dependencies>

		<!-- <dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring.version}</version>
		</dependency> 

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>-->
		
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>${spring.version}</version>
		</dependency>
		
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		
		<!-- <dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-expression</artifactId>
			<version>${spring.version}</version>
		</dependency>
		
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency> -->
		
		
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${spring.version}</version>
		</dependency>
		
			<!-- Apache Commons Upload -->
	<dependency>
		<groupId>commons-fileupload</groupId>
		<artifactId>commons-fileupload</artifactId>
		<version>1.3</version>
	</dependency>

	<!-- Apache Commons Upload -->
	<dependency>
		<groupId>commons-io</groupId>
		<artifactId>commons-io</artifactId>
		<version>2.4</version>
	</dependency>
		
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>${jstl.version}</version>
		</dependency>
		
		  <dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		  </dependency>
		
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.3</version>
		</dependency>
		
		<!-- Jackson JSON Mapper -->
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.2.2</version>
		</dependency>
		
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.2.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>2.2.2</version>
		</dependency>
		
		<!-- Spring AOP dependency -->
        <dependency>
    	        <groupId>cglib</groupId>
		<artifactId>cglib</artifactId>
		<version>2.2</version>
	</dependency>
 
        <!-- MySQL database driver -->
	<dependency>
		<groupId>mysql</groupId>
		<artifactId>mysql-connector-java</artifactId>
		<version>${mysql.version}</version>
	</dependency>
 
 	
	<!-- Hibernate framework -->
	<dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>${hibernate.version}</version>
      <exclusions>
        <exclusion>
	        <groupId>org.slf4j</groupId>
	        <artifactId>slf4j-api</artifactId>
      	</exclusion>
      </exclusions>
    </dependency>
    
    <dependency>
		<groupId>org.hibernate</groupId>
		<artifactId>hibernate-ehcache</artifactId>
		<version>${hibernate.version}</version>
		<exclusions>
        <exclusion>
	        <groupId>org.slf4j</groupId>
	        <artifactId>slf4j-api</artifactId>
      	</exclusion>
      </exclusions>
	</dependency>

	<dependency>
		<groupId>org.hibernate</groupId>
		<artifactId>hibernate-entitymanager</artifactId>
		<version>${hibernate.version}</version>
		<exclusions>
        <exclusion>
	        <groupId>org.slf4j</groupId>
	        <artifactId>slf4j-api</artifactId>
      	</exclusion>
      </exclusions>
	</dependency>
	
	<dependency>
		<groupId>org.hibernate</groupId>
		<artifactId>hibernate-validator</artifactId>
		<version>4.3.0.Final</version>
		<exclusions>
        <exclusion>
	        <groupId>org.slf4j</groupId>
	        <artifactId>slf4j-api</artifactId>
      	</exclusion>
      	</exclusions>
	</dependency>
	

<!--         <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-c3p0</artifactId>
            <version>${hibernate.version}</version>
        </dependency> -->	
 
 <!-- Joda-Time -->
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>${joda-time.version}</version>
        </dependency>
 
        <!-- To map JodaTime with database type -->
        <dependency>
            <groupId>org.jadira.usertype</groupId>
            <artifactId>usertype.core</artifactId>
            <version>3.0.0.CR1</version>
        </dependency>
        
 
	<!-- Hibernate library dependecy start -->
	
	<!-- 
	<dependency>
		<groupId>dom4j</groupId>
		<artifactId>dom4j</artifactId>
		<version>1.6.1</version>
	</dependency>
 
	<dependency>
		<groupId>commons-logging</groupId>
		<artifactId>commons-logging</artifactId>
		<version>1.1.1</version>
	</dependency>
 
	<dependency>
		<groupId>commons-collections</groupId>
		<artifactId>commons-collections</artifactId>
		<version>3.2.2</version>
	</dependency>
 
	<dependency>
		<groupId>antlr</groupId>
		<artifactId>antlr</artifactId>
		<version>2.7.7</version>
	</dependency>
 -->	<!-- Hibernate library dependecy end -->
	
	<!-- <dependency>
    	<groupId>com.aspose</groupId>
        <artifactId>aspose-words</artifactId>
        <version>15.2.0</version>
    </dependency> -->
    
    <dependency>
    	<groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.4</version>
    </dependency>

	</dependencies>

	<build>
		<finalName>BeehiveWebCRM</finalName>

		<plugins>
		
			<!-- <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>9.2.11.v20150529</version>
				<configuration>
					<jvmArgs>-Xmx 1G  -XX:PermSize=256M -XX:MaxPermSize=256M -XX:+HeapDumpOnOutOfMemoryError</jvmArgs>
					<scanIntervalSeconds>10</scanIntervalSeconds>
					<webApp>
						<contextPath>/beehiveWebFlow</contextPath>
					</webApp>
					<httpConnector>
			          host>localhost</host
			          <port>9999</port>
			        </httpConnector>
      
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
					<wtpversion>2.0</wtpversion>
					<wtpContextName>spring3</wtpContextName>
				</configuration>
			</plugin> -->
			
			 <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-war-plugin</artifactId>
		        <version>2.6</version>
		        <configuration>
		          <packagingExcludes>WEB-INF/lib/servlet*.jar</packagingExcludes>
		          <warSourceExcludes>WEB-INF/lib/servlet*.jar</warSourceExcludes>
				  <archive>
		          	<manifestEntries>
		            	<Dependencies>org.apache.log4j</Dependencies>
		            </manifestEntries>
		          </archive>
		        </configuration>
		      </plugin>   
			
		</plugins>
	</build>
	
	<repositories>
    <repository>
      <id>repository.jboss.org-public</id>
      <name>JBoss repository</name>
      <url>https://repository.jboss.org/nexus/content/groups/public</url>
    </repository> 
   
    <repository>
	    <id>java.net</id>
	    <url>http://download.java.net/maven/2/</url>
	</repository>
     
    <repository>
        <id>GlassFish</id>
        <name>GlassFish Maven Repository</name>
        <url>http://download.java.net/maven/glassfish/</url>
    </repository>
    <repository>
        <id>java.net.m1repo</id>
        <name>java.net Maven 1 Repository</name>
        <url>http://download.java.net/maven/1/</url>
    </repository>
   <repository>
        <id>java.net.m2repo</id>
        <name>java.net Maven 2 Repository</name>
        <url>http://download.java.net/maven/2/</url>
        <layout>default</layout>
    </repository>
    <repository>
    	<id>AsposeJavaAPI</id>
        <name>Aspose Java API</name>
        <url>http://maven.aspose.com/artifactory/simple/ext-release-local/</url>
    </repository>
 
  </repositories>

</project>
